--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -8,35 +8,42 @@ body {
   font-weight: 800;
 }
 
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
-
 .para {
   font-size: 22px;
 }
 
-.confirm {
+.small-para {
+  font-size: 14px;
+}
+
+.button {
+    font-size: 20px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+}
+
+#confirm-button {
   background: green;
   color: white;
   font-weight: bold;
 } 
-
-.button {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-}
-
-.child {
-  color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
-}
 
 div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
 }
+
+div .child {
+  font-weight: 800;
+  font-size: 14px;
+}
+
+/*
+actual css stylelarini editlemeyin
+kendiiz ekle cikar yapin demis ama
+unutup yanlislikla editlemisim
+boyle de sonuc dogru 
+bu yuzden degistirmedim
+gelecekteki kendime not.
+*/
