--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,78 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
-  height: 72px;
-  background: darkmagenta;
+  height: 52px;
+  background:darkmagenta;
   color: white;
-}
+  font-weight: bold;
+  font-size:23px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+ }
 
 .footer {
-  height: 72px;
+  height: 52px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+ justify-content: center;
+ align-items: center;
 }
 
 .sidebar {
-  width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  width:200px;
+  list-style-type: none;
+  margin-top: -110px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+.container{
+  margin-left:250px;
+  display: flex;
+  flex-direction: column;
+  margin-top: -700px; 
+  gap:40px;
+}
+
+.group1,.group2{
+  display: flex;
+  gap:40px;
+}
+
+.card{
+padding:10px;
+width:300px;
+height: 200px;
+}
+
+ul{
+  display: flex;
+  flex-direction: column;
+  padding-bottom:540px;
+  list-style-type: none;
+  gap:10px;
+  align-items: flex-start;
+  padding-left:10px;
+}
+
+a{
+  color:aliceblue
 }
